--- a/quest/package.json
+++ b/quest/package.json
@@ -12,6 +12,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "use-react-router": "^1.0.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
