--- a/quest/package.json
+++ b/quest/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "quest",
+  "name": "yelp-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "bulma": "^0.9.3",
-    "query-string": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "bulma": "^0.9.0",
+    "query-string": "^6.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-rating": "^2.0.5",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "use-react-router": "^1.0.7",
-    "web-vitals": "^1.1.2"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "use-react-router": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,10 +19,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
